External styling done

--- a/src/index.html
+++ b/src/index.html
@@ -16,15 +16,15 @@
       <meta name="mobile-web-app-capable" content="yes" />
       <meta name="mobile-web-app-status-bar-style" content="black" />
       <meta name="mobile-web-app-title" content="TutorialApp" />
-<style>
-
-</style>
-      <script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.0.2/webcomponents-loader.js"></script>      <script>
+        
         if (!window.customElements) {
           document.write('<!--');
         }
       </script>
       <script src="./vendor/custom-elements-es5-adapter.js"></script>
+      
       <!-- ! DO NOT REMOVE THIS COMMENT, WE NEED ITS CLOSING MARKER -->
     </head>
 
